@@ -1,8 +1,3 @@
-ADD_EXECUTABLE (
-    make-gnome-freecell-board
-    make_gnome_freecell_board.c
-)
-
 ADD_EXECUTABLE(
     make-aisleriot-freecell-board
     make_aisleriot_freecell_board.c
@@ -69,14 +64,12 @@ IF (UNIX)
 
     # Install the nroff symbolic links.
     INSTALL_MAN ("make-aisleriot-freecell-board.6" 6)
-    INSTALL_MAN ("make-gnome-freecell-board.6" 6)
     INSTALL_MAN ("make_pysol_freecell_board.py.6" 6)
     INSTALL_MAN ("pi-make-microsoft-freecell-board.6" 6)
 ENDIF ()
 
 INSTALL(
     TARGETS
-        "make-gnome-freecell-board"
         "pi-make-microsoft-freecell-board"
         "make-aisleriot-freecell-board"
     DESTINATION
